Completed pandas-sklearn-basics.ipynb notebook; the unix-conda-pip notebook was simply opened and closed (unchanged) but showed up on git status as modified

--- a/assignments/week-1-mle-basictools/nb/unix-conda-pip.ipynb
+++ b/assignments/week-1-mle-basictools/nb/unix-conda-pip.ipynb
@@ -1247,9 +1247,9 @@
    "hash": "5927eeb448d79922bc8ff2e0b29f33a28322850e36c32320028d81390f797ebb"
   },
   "kernelspec": {
-   "display_name": "Python (tf38)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tf38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1261,7 +1261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
