final week 2 twitter sentiment analysis notebook

--- a/assignments/week-2-twitter-sentiment/nb/analyze-sentiment-twitter.ipynb
+++ b/assignments/week-2-twitter-sentiment/nb/analyze-sentiment-twitter.ipynb
@@ -546,9 +546,9 @@
    "source": [
     "## *Answer:*\n",
     "Using the model *bertweet-sentiment-analysis*, which allows for an additional class of tweets with label *NEUTRAL* (as compared to the first, default sentiment analysis model *distilbert-base-uncased-finetuned-sst-2-english*) has the following notable effects:\n",
-    "- Most tweets (64%) are labeled *NEUTRAL* (a class that didn't exist with the first model)\n",
-    "- Tweets labeled *POSITIVE* decreases from 49% in the first model to 29% with *bertweet-base*\n",
-    "- Tweets labeled *NEGATIVE* decreases sharply from 51% in the first model to a mere 7% with *bertweet*\n",
+    "- Most tweets (64%) are labeled *NEUTRAL* (a class that didn't exist with the first model).\n",
+    "- % tweets labeled *POSITIVE* decreases from 49% in the first model to 29% with *bertweet-base*.\n",
+    "- % tweets labeled *NEGATIVE* decreases sharply from 51% in the first model to a mere 7% with *bertweet*.\n",
     "\n",
     "*Does bertweet-base look like it gave better results than distilbert-base?* To answer this, let's take a look at the labeled tweets:"
    ]
@@ -709,7 +709,7 @@
     }
    ],
    "source": [
-    "# tweets classified by distil_sentiment:\n",
+    "# tweets as classified by distil_sentiment:\n",
     "num_tweets = 100\n",
     "pos_distil = []\n",
     "neg_distil = []\n",
@@ -850,7 +850,7 @@
     }
    ],
    "source": [
-    "# tweets classified by bert_sentiment:\n",
+    "# tweets as classified by bert_sentiment:\n",
     "num_tweets = 100\n",
     "pos_bert = []\n",
     "neu_bert = []\n",
@@ -877,12 +877,16 @@
    "id": "025228f3",
    "metadata": {},
    "source": [
-    "### *Preliminary thoughts...*\n",
-    "A quick read through the somewhat more detailed classification results shown above, which compare *distil_sentiment* and *bert_sentiment*, suggests that *bert_sentiment* more closely approximates how a human might label these *short* text bites. The addition of a 'Neutral' class in *bert* pulled a large number of tweets from 'Negative' (in the default *distil_sentiment* model) into 'Neutral.'\n",
+    "### *Answer (continued)...*\n",
+    "A quick read of the above results, comparing *distil_sentiment* & *bert_sentiment*, suggests that *bert_sentiment* did much better (I agreed with most of *bert's* labels):\n",
+    "- Adding a 'Neutral' class in *bert* pulled ~80% of tweets labeled as 'Negative' by *distil_sentiment* into 'Neutral' (40/51). About 50% of tweets labeled as 'Positive' by *destil_sentiment* were re-classified as 'Neutral' (24/49). \n",
+    "- Still, the default *distilbert* model got most of the *POSITIVE* and *NEGATIVE* tweets right i.e., few of the tweets re-classified by *bertweet* represented *a switch to the opposite sentiment, viz.* from *POS to NEG* (only 1/49) or *NEG to POS* (only 5/64).\n",
+    "- Not surprisingly, *Distilbert* had trouble with *NEUTRAL* tweets (having no place to put these!). In this sample, it seems to prefer labeling these as *NEGATIVE*. \n",
+    "- ***Adding the NEUTRAL label appears to significantly improve results compared with forcing the restrictive binary output of distilbert.***\n",
     "\n",
-    "Of relevance, Hugging Face notes that *distilbert-base-uncased-finetuned-sst-2-english* was fine-tuned on SST-2, a large corpus of >10K single sentences extracted from movie reviews. In addition, it is intended to be fine-tuned on a downstream task (in this case, for example, tweets), although its precision, recall, accuracy, & F1 metrics approach 99%.\n",
+    "Of relevance, Hugging Face notes that *distilbert-base-uncased-finetuned-sst-2-english* was fine-tuned on SST-2, a corpus of >10K single sentences extracted from movie reviews. In addition, *distilbert* is intended to be fine-tuned on a downstream task (in this case, tweets), although its precision, recall, accuracy, & F1 metrics approach 99% when tested against subsets of the SST-2 data.\n",
     "\n",
-    "Not surprisingly, Hugging Face's *bertweet-base-sentiment-analysis* model appears to give better results--creating the impression of having a more nuanced 'understanding'--as it was trained on a 2017 corpus of about 40K tweets using POS, NEG, and NEU labels. Both the addition of the highly relevant 'Neutral' class as well as training on tweets are consistent with its improved performance on our small set of Elon's tweets."
+    "By contrast, Hugging Face's *bertweet-base-sentiment-analysis* model was trained on a 2017 corpus of ~40K tweets, presumably much more similar to our sample than *distilbert's* movie reviews. Together with the addition of a 3rd *NEUTRAL* class, this may help explain *bertweet's* superior performance here. (NB: When reviewing the above data, *bertweet* at times creates the impression of having a rather un-machine-like, nuanced 'understanding' of Elon's tweets!)"
    ]
   },
   {
@@ -1194,8 +1198,11 @@
    "id": "2bb53074",
    "metadata": {},
    "source": [
-    "(see answer above...)\n",
-    "Here again, *bert* appears to outperform *distilbert-base*, with a significantly larger 'Neutral' pool."
+    "### *Answer (continued)...*\n",
+    "\n",
+    "Here again, *bertweet* seems to outperform *distilbert-base*, with a significantly larger 'Neutral' pool on the small sample above. The 'Neutral' label appears to be more relevant to sentiment analysis of tweets than one might have anticipated, and is a good reminder of the importance of looking at the data in model design.\n",
+    "\n",
+    "As noted previously, the degree of similarity between training and test data is a critical determinant of model performance, with *bertweet* being trained on tweets (although arguably, no amount of training can anticipate Elon!!), while the default *distilbert* was trained on movie reviews. Nonetheless, both models show generalizability beyond their respective training domains, as suggested by the small sample of 'difficult tweets' above, which also included e.g. non-tweets: short phrases in other languages, common email signoffs (e.g. 'Best regards,'), informational text, proverbs/aphorisms, and poetry."
    ]
   },
   {
