Draft work on week4 assignments

--- a/assignments/week-4-EDA/nb/imports.ipynb
+++ b/assignments/week-4-EDA/nb/imports.ipynb
@@ -33,13 +33,20 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.linear_model import LinearRegression\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python (wm39j)",
    "language": "python",
-   "name": "python3"
+   "name": "wm39j"
   },
   "language_info": {
    "codemirror_mode": {
